Adds full name of contributor

--- a/docs/docs/about/team.mdx
+++ b/docs/docs/about/team.mdx
@@ -300,12 +300,6 @@ Do you want to know the curious and bright minds behind the CLI for Microsoft 36
     x: 'erwinvanhunen'
   },
   {
-    name: 'Fahad',
-    company: 'CTS',
-    github: 'codevfahad',
-    x: ''
-  },
-  {
     name: 'Fredrik Thorild',
     company: 'Sogeti Sweden',
     github: 'fthorild',
@@ -532,6 +526,12 @@ Do you want to know the curious and bright minds behind the CLI for Microsoft 36
     company: 'TCS',
     github: 'ashiqf',
     x: 'ashiqfaleel'
+  },
+  {
+    name: 'Mohd Fahad Khan',
+    company: 'CTS',
+    github: 'codevfahad',
+    x: ''
   },
   {
     name: 'Nanddeep Nachan',
