Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -4,9 +4,14 @@ sidebar_position: 4
 
 # Release notes
 
-## [v11.3.0](https://github.com/pnp/cli-microsoft365/releases/tag/v11.3.0)
+## v11.4.0 (beta)
 
-### New commands
+### Changes
+
+- fixed [external item add](../cmd/external/item/item-add.mdx) command when using custom properties [#6792](https://github.com/pnp/cli-microsoft365/issues/6792)
+- fixed short option aliases for `spe container` commands [#7064](https://github.com/pnp/cli-microsoft365/issues/7064)
+
+## [v11.3.0](https://github.com/pnp/cli-microsoft365/releases/tag/v11.3.0)
 
 ### Changes
 
@@ -15,7 +20,7 @@ sidebar_position: 4
 - enforced delegated access token for OneNote commands [#7049](https://github.com/pnp/cli-microsoft365/issues/7049)
 - updated [login](../cmd/login.mdx) command documentation [#3725](https://github.com/pnp/cli-microsoft365/issues/3725)
 - added support for SPFx v1.22.0 and v1.22.1
-- extended 'spfx doctor' with support for heft
+- extended [spfx doctor](../cmd/spfx/spfx-doctor.mdx) with support for heft
 
 # Release notes
 
