Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -4,12 +4,13 @@ sidebar_position: 4
 
 # Release notes
 
-## v11.4.0 (beta)
+## v11.3.1 (beta)
 
 ### Changes
 
 - fixed [external item add](../cmd/external/item/item-add.mdx) command when using custom properties [#6792](https://github.com/pnp/cli-microsoft365/issues/6792)
 - fixed short option aliases for `spe container` commands [#7064](https://github.com/pnp/cli-microsoft365/issues/7064)
+- extended 'spfx project upgrade' with handling ranges (~) [#7055](https://github.com/pnp/cli-microsoft365/issues/7055)
 
 ## [v11.3.0](https://github.com/pnp/cli-microsoft365/releases/tag/v11.3.0)
 
