Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -4,6 +4,14 @@ sidebar_position: 4
 
 # Release notes
 
+## v11.4.0 (Beta)
+
+### New commands
+
+### Changes
+
+- migrates to Zod v4
+
 ## [v11.3.1](https://github.com/pnp/cli-microsoft365/releases/tag/v11.3.1)
 
 ### Changes
