Adds hostProperties option to applicationcustomizer commands. Closes #6825

--- a/docs/docs/cmd/spo/applicationcustomizer/applicationcustomizer-set.mdx
+++ b/docs/docs/cmd/spo/applicationcustomizer/applicationcustomizer-set.mdx
@@ -29,10 +29,13 @@ m365 spo applicationcustomizer set [options]
 : The new title of the Application Customizer.
 
 `--description [description]`
-: Description of the application customizer. Specify an empty string to clear.
+: Description of the Application Customizer. Specify an empty string to clear.
 
 `-p, --clientSideComponentProperties  [clientSideComponentProperties]`
 : The Client Side Component properties of the Application Customizer.
+
+`--hostProperties [hostProperties]`
+: Set the host properties for the Application Customizer. Set to an empty string to clear the value.
 
 `-s, --scope [scope]`
 : The scope where to lookup the Application Customizer. Allowed values: `Site`, `Web`, and `All`. Defaults to `All`.
@@ -42,7 +45,7 @@ m365 spo applicationcustomizer set [options]
 
 ## Remarks
 
-Running this command from the Windows Command Shell (cmd.exe) or PowerShell for Windows OS XP, 7, 8, 8.1 without bash installed might require additional formatting for clientSideComponentProperties option that has JSON value because the command shell treats quotes differently. For example, this is how Application Customizer can be updated from the Windows cmd.exe:
+Running this command from the Windows Command Shell (cmd.exe) or PowerShell for Windows OS XP, 7, 8, 8.1 without bash installed might require additional formatting for `clientSideComponentProperties` and `hostProperties` options that have JSON value because the command shell treats quotes differently. For example, this is how Application Customizer can be updated from the Windows cmd.exe:
 
 ```sh
 m365 spo applicationcustomizer set --webUrl https://contoso.sharepoint.com/sites/sales --id b41916e7-e69d-467f-b37f-ff8ecf8f99f2 --newTitle "Some customizer" --clientSideComponentProperties '{\"testMessage\":\"Test message\"}'
@@ -52,21 +55,21 @@ Note, how the clientSideComponentProperties option (--clientSideComponentPropert
 
 :::warning[Escaping JSON in PowerShell]
 
-When using the `--clientSideComponentProperties` option it's possible to enter a JSON string. In PowerShell 5 to 7.2 [specific escaping rules](./../../../user-guide/using-cli.mdx#escaping-double-quotes-in-powershell) apply due to an issue. Remember that you can also use [file tokens](./../../../user-guide/using-cli.mdx#passing-complex-content-into-cli-options) instead.
+When using the `--clientSideComponentProperties` or `--hostProperties` options it's possible to enter a JSON string. In PowerShell 5 to 7.2 [specific escaping rules](./../../../user-guide/using-cli.mdx#escaping-double-quotes-in-powershell) apply due to an issue. Remember that you can also use [file tokens](./../../../user-guide/using-cli.mdx#passing-complex-content-into-cli-options) instead.
 
 :::
 
-This command can be used for updating an application customizer on a specific site. To update an application customizer that's installed tenant-wide, view our dedicated [spo tenant applicationcustomizer set](../tenant/tenant-applicationcustomizer-set.mdx) command.
+This command can be used for updating an Application Customizer on a specific site. To update an Application Customizer that's installed tenant-wide, view our dedicated [spo tenant applicationcustomizer set](../tenant/tenant-applicationcustomizer-set.mdx) command.
 
 ## Examples
 
-Updates the title of an application customizer on the sales site.
+Updates the title of an Application Customizer on the sales site.
 
 ```sh
 m365 spo applicationcustomizer set --id 058140e3-0e37-44fc-a1d3-79c487d371a3 --newTitle "Some customizer" --webUrl https://contoso.sharepoint.com/sites/sales
 ```
 
-Updates the properties of an application customizer on the sales site.
+Updates the properties of an Application Customizer on the sales site.
 
 ```sh
 m365 spo applicationcustomizer set --id 058140e3-0e37-44fc-a1d3-79c487d371a3 --clientSideComponentProperties '{ "testMessage": "Test message" }' --webUrl https://contoso.sharepoint.com/sites/sales
