Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -10,7 +10,7 @@ sidebar_position: 4
 
 ### Changes
 
-- migrates to Zod v4
+- migrated to Zod v4 [#7005](https://github.com/pnp/cli-microsoft365/pull/7005)
 
 ## [v11.3.1](https://github.com/pnp/cli-microsoft365/releases/tag/v11.3.1)
 
@@ -30,8 +30,6 @@ sidebar_position: 4
 - updated [login](../cmd/login.mdx) command documentation [#3725](https://github.com/pnp/cli-microsoft365/issues/3725)
 - added support for SPFx v1.22.0 and v1.22.1
 - extended [spfx doctor](../cmd/spfx/spfx-doctor.mdx) with support for heft
-
-# Release notes
 
 ## [v11.2.0](https://github.com/pnp/cli-microsoft365/releases/tag/v11.2.0)
 
