Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -11,6 +11,8 @@ sidebar_position: 4
 ### Changes
 
 - migrated to Zod v4 [#7005](https://github.com/pnp/cli-microsoft365/pull/7005)
+- added command 'spo list defaultvalue get' [#6535](https://github.com/pnp/cli-microsoft365/issues/6535)
+- added minimal permissions for 'entra app permission add', 'entra app permission list', 'entra app permission remove' [#6924](https://github.com/pnp/cli-microsoft365/issues/6924)
 
 ## [v11.3.1](https://github.com/pnp/cli-microsoft365/releases/tag/v11.3.1)
 
