--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -8,10 +8,13 @@ sidebar_position: 4
 
 ### New commands
 
+**SharePoint:**
+
+- [spo list defaultvalue get](../cmd/spo/list/list-defaultvalue-get.mdx) - gets a specific default column value from a specific document library [#6535](https://github.com/pnp/cli-microsoft365/issues/6535)
+
 ### Changes
 
 - migrated to Zod v4 [#7005](https://github.com/pnp/cli-microsoft365/pull/7005)
-- added command 'spo list defaultvalue get' [#6535](https://github.com/pnp/cli-microsoft365/issues/6535)
 - added minimal permissions for 'entra app permission add', 'entra app permission list', 'entra app permission remove' [#6924](https://github.com/pnp/cli-microsoft365/issues/6924)
 
 ## [v11.3.1](https://github.com/pnp/cli-microsoft365/releases/tag/v11.3.1)
