Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -16,6 +16,8 @@ sidebar_position: 4
 
 - migrated to Zod v4 [#7005](https://github.com/pnp/cli-microsoft365/pull/7005)
 - added minimal permissions for 'entra app permission add', 'entra app permission list', 'entra app permission remove' [#6924](https://github.com/pnp/cli-microsoft365/issues/6924)
+- added support for HTML messages using teams chat message send [#6483](https://github.com/pnp/cli-microsoft365/pull/6483)
+- enhanced 'teams chat message list' command [#6484](https://github.com/pnp/cli-microsoft365/pull/6484)
 
 ## [v11.3.1](https://github.com/pnp/cli-microsoft365/releases/tag/v11.3.1)
 
