Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -15,9 +15,11 @@ sidebar_position: 4
 ### Changes
 
 - migrated to Zod v4 [#7005](https://github.com/pnp/cli-microsoft365/pull/7005)
-- added minimal permissions for 'entra app permission add', 'entra app permission list', 'entra app permission remove' [#6924](https://github.com/pnp/cli-microsoft365/issues/6924)
-- added support for HTML messages using teams chat message send [#6483](https://github.com/pnp/cli-microsoft365/pull/6483)
-- enhanced 'teams chat message list' command [#6484](https://github.com/pnp/cli-microsoft365/pull/6484)
+- added minimal permissions for `entra app permission` commands [#6924](https://github.com/pnp/cli-microsoft365/issues/6924)
+- added support for HTML messages using [teams chat message send](../cmd/teams/chat/chat-message-send.mdx) [#6483](https://github.com/pnp/cli-microsoft365/pull/6483)
+- enhanced [teams chat message list](../cmd/teams/chat/chat-message-list.mdx) command [#6484](https://github.com/pnp/cli-microsoft365/pull/6484)
+- added support for Node.js v24 [#7079](https://github.com/pnp/cli-microsoft365/pull/7079)
+- fixed [entra m365group remove](../cmd/entra/m365group/m365group-remove.mdx) command [#7054](https://github.com/pnp/cli-microsoft365/issues/7054)
 
 ## [v11.3.1](https://github.com/pnp/cli-microsoft365/releases/tag/v11.3.1)
 
