Adds new contributor

--- a/docs/docs/about/team.mdx
+++ b/docs/docs/about/team.mdx
@@ -150,6 +150,12 @@ Do you want to know the curious and bright minds behind the CLI for Microsoft 36
     x: 'anooptells'
   },
   {
+    name: 'Antanina Druzhkina',
+    company: '',
+    github: 'Ateina',
+    x: ''
+  },
+  {
     name: 'Arjen Bloemsma',
     company: 'Bloemium',
     github: 'arjenbloemsma',
