Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -20,6 +20,10 @@ sidebar_position: 4
 - enhanced [teams chat message list](../cmd/teams/chat/chat-message-list.mdx) command [#6484](https://github.com/pnp/cli-microsoft365/pull/6484)
 - added support for Node.js v24 [#7079](https://github.com/pnp/cli-microsoft365/pull/7079)
 - fixed [entra m365group remove](../cmd/entra/m365group/m365group-remove.mdx) command [#7054](https://github.com/pnp/cli-microsoft365/issues/7054)
+- fixed duplicate names for [connection set](../cmd/connection/connection-set.mdx) command [#6174](https://github.com/pnp/cli-microsoft365/issues/6174)
+- enhanced [spo page set](../cmd/spo/page/page-set.mdx) command [#7095](https://github.com/pnp/cli-microsoft365/issues/7095)
+- enhanced [spo page header set](../cmd/spo/page/page-header-set.mdx) command [#7097](https://github.com/pnp/cli-microsoft365/issues/7097)
+- enhanced [spo file add](../cmd/spo/file/file-add.mdx) command [#4691](https://github.com/pnp/cli-microsoft365/issues/4691)
 
 ## [v11.3.1](https://github.com/pnp/cli-microsoft365/releases/tag/v11.3.1)
 
