--- a/docs/docs/cmd/spo/site/site-hubsite-connect.mdx
+++ b/docs/docs/cmd/spo/site/site-hubsite-connect.mdx
@@ -1,4 +1,6 @@
 import Global from '/docs/cmd/_global.mdx';
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
 
 # spo site hubsite connect
 
@@ -14,10 +16,13 @@ m365 spo site hubsite connect [options]
 
 ```md definition-list
 `-u, --siteUrl <siteUrl>`
-: The URL of the site collection to connect to the hub site
+: The URL of the site collection to connect to the hub site.
 
 `-i, --id <id>`
-: The ID of the hub site to which to connect the site collection
+: The ID of the hub site to which to connect the site collection.
+
+`--asAdmin`
+: Connect the site to a hub site as SharePoint admin.
 ```
 
 <Global />
@@ -28,12 +33,37 @@ If the specified site collection is already connected to a hub site, it will be 
 
 If the specified `id` doesn't point to a valid hub site, you will get a `ResourceNotFoundException` error.
 
+## Permissions
+
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource   | Permissions          |
+  |------------|----------------------|
+  | SharePoint | AllSites.FullControl |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource   | Permissions           |
+  |------------|-----------------------|
+  | SharePoint | Sites.FullControl.All |
+
+  </TabItem>
+</Tabs>
+
 ## Examples
 
 Connect a specific site collection to a hub site
 
 ```sh
 m365 spo site hubsite connect --siteUrl https://contoso.sharepoint.com/sites/contoso-sales --id 255a50b2-527f-4413-8485-57f4c17a24d1
+```
+
+Connect a specific site collection to a hub site as SharePoint admin
+
+```sh
+m365 spo site hubsite connect --siteUrl https://contoso.sharepoint.com/sites/contoso-sales --id 255a50b2-527f-4413-8485-57f4c17a24d1 --asAdmin
 ```
 
 ## Response
