address code review feedback

--- a/docs/docs/cmd/spo/brandcenter/brandcenter-settings-list.mdx
+++ b/docs/docs/cmd/spo/brandcenter/brandcenter-settings-list.mdx
@@ -21,18 +21,16 @@ m365 spo brandcenter settings list [options]
 <Tabs>
   <TabItem value="Delegated">
 
-  | Resource        | Permissions     |
-  |-----------------|-----------------|
-  | Microsoft Graph | Sites.Read.All  |
-  | SharePoint      | AllSites.Read   |
+  | Resource   | Permissions   |
+  |------------|---------------|
+  | SharePoint | AllSites.Read |
 
   </TabItem>
   <TabItem value="Application">
 
-  | Resource        | Permissions      |
-  |-----------------|------------------|
-  | Microsoft Graph | Sites.Read.All   |
-  | SharePoint      | Sites.Read.All   |
+  | Resource   | Permissions    |
+  |------------|----------------|
+  | SharePoint | Sites.Read.All |
 
   </TabItem>
 </Tabs>
@@ -133,7 +131,7 @@ m365 spo brandcenter settings list
   <TabItem value="Markdown">
 
   ```md
-  # spo brandcenter settings list --debug "false" --verbose "false"
+  # spo brandcenter settings list
 
   Date: 12/1/2025
 
