Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -12,6 +12,10 @@ sidebar_position: 4
 
 - [spo list defaultvalue get](../cmd/spo/list/list-defaultvalue-get.mdx) - gets a specific default column value from a specific document library [#6535](https://github.com/pnp/cli-microsoft365/issues/6535)
 
+**SharePoint Premium:**
+
+- [spp autofillcolumn set](../cmd/spp/autofillcolumn/autofillcolumn-set.mdx) - Applies the autofill option to the selected column [#6203](https://github.com/pnp/cli-microsoft365/issues/6203)
+
 ### Changes
 
 - migrated to Zod v4 [#7005](https://github.com/pnp/cli-microsoft365/pull/7005)
