--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -12,6 +12,10 @@ sidebar_position: 4
 
 - [spo list defaultvalue get](../cmd/spo/list/list-defaultvalue-get.mdx) - gets a specific default column value from a specific document library [#6535](https://github.com/pnp/cli-microsoft365/issues/6535)
 
+**SharePoint Embedded:**
+
+- [spe container recyclebinitem remove](../cmd/spe/container/container-recyclebinitem-remove.mdx) - permanently removes a container from the recycle bin [#6734](https://github.com/pnp/cli-microsoft365/issues/6734)
+
 **SharePoint Premium:**
 
 - [spp autofillcolumn set](../cmd/spp/autofillcolumn/autofillcolumn-set.mdx) - Applies the autofill option to the selected column [#6203](https://github.com/pnp/cli-microsoft365/issues/6203)
@@ -28,7 +32,6 @@ sidebar_position: 4
 - enhanced [spo page set](../cmd/spo/page/page-set.mdx) command [#7095](https://github.com/pnp/cli-microsoft365/issues/7095)
 - enhanced [spo page header set](../cmd/spo/page/page-header-set.mdx) command [#7097](https://github.com/pnp/cli-microsoft365/issues/7097)
 - enhanced [spo file add](../cmd/spo/file/file-add.mdx) command [#4691](https://github.com/pnp/cli-microsoft365/issues/4691)
-- added [spe container recyclebinitem remove](../cmd/spe/container/container-recyclebinitem-remove.mdx) command [#6734](https://github.com/pnp/cli-microsoft365/issues/6734)
 - fixed workflow caching and docs announcement bar close button
 
 ## [v11.3.1](https://github.com/pnp/cli-microsoft365/releases/tag/v11.3.1)
