Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -4,6 +4,12 @@ sidebar_position: 4
 
 # Release notes
 
+## v11.5.0 (Beta)
+
+### Changes
+
+- added support for SPFx v1.22.2 [#7114](https://github.com/pnp/cli-microsoft365/issues/7114)
+
 ## [v11.4.0](https://github.com/pnp/cli-microsoft365/releases/tag/v11.4.0)
 
 ### New commands
